--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
         "react"
     ],
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "required": {
+            "some": [ "nesting", "id" ]
+        }
     }
 }
