--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -47,5 +48,6 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "sass": "^1.32.8"
-  }
+  },
+  "proxy": "http://localhost:8080" 
 }
