--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,6 @@
         "react"
     ],
     "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "required": {
-            "some": [ "nesting", "id" ]
-        }
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
